--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,6 +1,15 @@
 ---
 driver:
   name: lxd_cli
+## FIXME! httpd/centos7/capability issue on lxc
+## https://github.com/lxc/lxd/issues/1245
+## https://bugzilla.redhat.com/show_bug.cgi?id=1012952
+## no drop of setfcap = 'set lxc.cap.drop = audit_control audit_write mac_admin mac_override mknod setpcap sys_admin sys_boot sys_module sys_nice sys_pacct sys_rawio sys_resource sys_time sys_tty_config'
+  config:
+    security.privileged: true
+
+transport:
+  name: sftp
 
 driver_config:
     customize:
@@ -22,13 +31,13 @@ provisioner:
   ansible_connection: ssh
 
 platforms:
-#  - name: ubuntu-16.04
+  - name: ubuntu-16.04
   - name: ubuntu-14.04
     driver_config:
       network:
-        - ["forwarded_port", {guest: 80, host: 8888}]
+        - ["forwarded_port", {guest: 80, host: 8588}]
 #  - name: ubuntu-12.04
-#  - name: centos-7
+  - name: centos-7
 #  - name: centos-6
 ## "Failed to complete #create action: [Broken pipe] on default-alpine-34"
 ## do we have python2 in default image?
@@ -40,14 +49,16 @@ suites:
     attributes:
   - name: nginx
     run_list:
-    attributes:
-        misp_webserver: 'nginx'
+## NOK
+#    attributes:
+#        misp_webserver: 'nginx'
     includes:
+      - ubuntu-16.04
       - ubuntu-14.04
-#      - centos-7.1
+      - centos-7
     provisioner:
       name: ansible_playbook
-      playbook: test/integration/default/default.yml
+      playbook: test/integration/nginx/default.yml
 
 
 
