--- a/tasks/apache2.yml
+++ b/tasks/apache2.yml
@@ -6,7 +6,7 @@
   register: rsync_result
   changed_when: 'rsync_result.stdout != ""'
   notify:
-    - restart apache
+    - restart webserver
 
 - name: redhat | update log path
   replace: "dest={{ apache_sitedir }}/misp.conf regexp='/var/log/apache2/' replace='{{ apache_logs }}/'"
@@ -15,16 +15,16 @@
 - file: dest="{{ apache_sitedir }}/misp.conf" mode=0644
 - file: dest=/etc/apache2/sites-enabled/000-default.conf state=absent
   notify:
-    - restart apache
+    - restart webserver
   when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
 - file: "src={{ apache_sitedir }}/misp.conf dest=/etc/apache2/sites-enabled/misp.conf state=link"
   notify:
-    - restart apache
+    - restart webserver
   when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
 
 - name: debian | ensure mod_rewrite is present
   apache2_module: state=present name=rewrite
   notify:
-    - restart apache
+    - restart webserver
   when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
 
