--- a/tasks/nginx.yml
+++ b/tasks/nginx.yml
@@ -1,5 +1,27 @@
 ---
 
+- debug: var=apache_sitedir
+- debug: var=ansible_distribution
+
 - name: set misp nginx configuration
-  template: src=nginx-misp.conf.j2 dest=/etc/nginx/sites-available/misp.conf mode=0644
+  template: src=nginx-misp.conf.j2 dest={{ apache_sitedir }}/misp.conf mode=0644
+  notify:
+    - restart webserver
+
+- block:
+    - name: debian | enable misp configuration
+      file: src=/etc/nginx/sites-available/misp.conf dest=/etc/nginx/sites-enabled/misp.conf state=link
+      notify:
+        - restart webserver
+    - name: debian | disable default configuration
+      file: dest=/etc/nginx/sites-enabled/default state=absent
+      notify:
+        - restart webserver
+  when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+
+- name: set nginx default configuration
+  template: src=nginx-empty.conf.j2 dest=/etc/nginx/nginx.conf mode=0644 backup=yes
+  notify:
+    - restart webserver
+  when: ansible_os_family == "RedHat" or ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
 
