--- a/test/integration/nginx/default.yml
+++ b/test/integration/nginx/default.yml
@@ -2,6 +2,7 @@
 
 - hosts: all
   vars:
+    - misp_webserver: 'nginx'
     - misp_testing: true
     - misp_testing_user: _misp
     - misp_testing_user_home: "/home/{{ misp_testing_user }}"
