--- a/test/integration/nginx/default.yml
+++ b/test/integration/nginx/default.yml
@@ -12,5 +12,6 @@
         - { u: dupont@admin.test, p: dupont_passphrase. }
         - { u: dupond@admin.test, p: dupond_passphrase. }
   roles:
+#    - geerlingguy.nginx
     - MISP
 
