--- a/meta/main.yml
+++ b/meta/main.yml
@@ -10,7 +10,7 @@ galaxy_info:
   # platform on this list, let us know and we'll get it added!
   #
   platforms:
-  - name: Centos
+  - name: EL
     versions:
      - 7
   - name: Ubuntu
@@ -23,12 +23,14 @@ galaxy_info:
   # Below are all categories currently available. Just as with
   # the platforms above, uncomment those that apply to your role.
   #
-  categories:
+  galaxy_tags:
   - system
   - security
 dependencies:
-  # List your role dependencies here, one per line. Only
-  # dependencies available via galaxy should be listed here.
-  # Be sure to remove the '[]' above if you add dependencies
-  # to this list.
   - redhat-epel
+## eventual dependencies for fine tuning but integration needed
+#  - geerlingguy.mysql
+## one or the other?
+#  - geerlingguy.nginx
+#  - geerlingguy.apache
+
