--- a/vars/Ubuntu-12.04.yml
+++ b/vars/Ubuntu-12.04.yml
@@ -5,7 +5,7 @@ misp_pkg_list:
  - mysql-server
  - php5
  - php5-mysql
- - php5-mbstring
+# - php5-mbstring
  - postfix
  - gcc
  - zip
@@ -23,19 +23,20 @@ misp_pkg_list:
  - curl
  - gnupg
 #
- - php5-redis
+# - php5-redis
  - python-mysqldb
  - rng-tools
 # misp-modules
  - python3
- - python3-pip
+# - python3-pip
+ - acl
 
 mysql_svc: mysql
 rng_svc: rng-tools
 misp_services:
     - "{{ apache_svc }}"
     - "{{ mysql_svc }}"
-    - "{{ rng_svc }}"
+#    - "{{ rng_svc }}"
 
 misp_services_nginx:
     - "{{ apache_svc }}"
