--- a/.travis.yml
+++ b/.travis.yml
@@ -1,73 +1,36 @@
 ---
-## from https://github.com/geerlingguy/ansible-role-apache/blob/master/.travis.yml
-sudo: required
-
-env:
-  - distribution: centos
-    version: 7
-    init: /usr/lib/systemd/systemd
-    run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
-  - distribution: ubuntu
-    version: 16.04
-    init: /lib/systemd/systemd
-    run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
-#    run_opts: "--cap-add SYS_ADMIN"
-  - distribution: ubuntu
-    version: 14.04
-    init: /sbin/init
-#    run_opts: ""
-    run_opts: "--privileged"
-#  - distribution: alpine
-#    version: 3.4
-#    init: /sbin/init
-#    run_opts: ""
-
-services:
-  - docker
-
+dist: trusty
+language: python
+python: "2.7"
 before_install:
-  # - sudo apt-get update
-  # Pull container
-  - 'sudo docker pull ${distribution}:${version}'
-  - env
-  - pwd
-  - find -ls
-  - cp test/travis/initctl_faker test/
-  - ln -s ansible-MISP ../MISP
-  - ./get-dependencies.sh
-  # Customize container
-  - 'sudo docker build --rm=true --file=test/travis/Dockerfile.${distribution}-${version} --tag=${distribution}-${version}:ansible test'
-
+ - sudo apt-get update -qq
+ - sudo apt-get install -qq python-apt python-pycurl
+ - ln -s ansible-MISP ../MISP
+ - ./get-dependencies.sh
+## for local travis execution as we use same default.yml than kitchen
+ - mkdir /tmp/kitchen
+ - ln -s /home/travis/build/juju4/ansible-MISP/test/integration/default/tmp /tmp/kitchen/tmp
+## serverspec test
+ - sudo apt-get install -qq ruby2.0 rake
+ - sudo gem2.0 install serverspec
+ - ln -s /home/travis/build/juju4/ansible-MISP/test/integration/default/serverspec/Rakefile
+install:
+  - pip install ansible
+  - ansible --version
+  - "{ echo '[defaults]'; echo 'roles_path = ../'; } >> ansible.cfg"
+  - gem2.0 --version
 script:
-  - container_id=$(mktemp)
-    # Run container in detached state
-## ## Note: mapping urandom/random to accelerate gpg key generation. Normally, have rng-tools or haveged to handle that but not running inside docker images we have
-  - 'sudo docker run --detach -v /dev/urandom:/dev/random --volume="${PWD%/*}":/etc/ansible/roles:ro ${run_opts} ${distribution}-${version}:ansible "${init}" > "${container_id}"'
+  - "echo \"[test-kitchen]\nlocalhost\" > inventory"
 
-  - 'sudo docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible --version'
-  - 'sudo docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible --connection=local -m setup localhost'
+# Check the role/playbook's syntax.
+  - "ansible-playbook -i inventory --syntax-check test/integration/default/default.yml"
 
-  # Ansible syntax check.
-  - 'sudo docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/roles/MISP/test/integration/default/default.yml --syntax-check'
+# Run the role/playbook with ansible-playbook.
+  - "ansible-playbook -i inventory --connection=local --sudo -vvvv test/integration/default/default.yml"
 
-  # Test role.
-  - 'sudo docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/roles/MISP/test/integration/default/default.yml'
+# Run the role/playbook again, checking to make sure it's idempotent.
+  - "ansible-playbook -i inventory test/integration/default/default.yml --connection=local --sudo | tee /tmp/idempotency.log | grep -q 'changed=0.*failed=0'  && (echo 'Idempotence test: pass' && exit 0)  || (echo 'Idempotence test: fail' && cat /tmp/idempotency.log && exit 1)"
 
-  # Test role idempotence.
-## FIXME! known fail
-  - >
-    sudo docker exec "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/roles/MISP/test/integration/default/default.yml
-    | tee /tmp/idempotency.log
-    | grep -q 'changed=0.*failed=0'
-    && (echo 'Idempotence test: pass' && exit 0)
-    || (echo 'Idempotence test: fail' && cat /tmp/idempotency.log && exit 0)
-
-# serverspec
-  - 'sudo docker exec --tty "$(cat ${container_id})" /etc/ansible/roles/MISP/test/integration/default/serverspec/run-local-tests.sh'
-
-  # Clean up
-  - 'sudo docker stop "$(cat ${container_id})"'
-
-notifications:
-  webhooks: https://galaxy.ansible.com/api/v1/notifications/
-
+# Serverspec
+#  - "test/integration/default/serverspec/run-local-tests.sh"
+  - "cd test/integration/default/serverspec/ && bundle exec rake spec"
