--- a/vars/Ubuntu-16.04.yml
+++ b/vars/Ubuntu-16.04.yml
@@ -34,6 +34,7 @@ misp_pkg_list:
 
 mysql_svc: mysql
 rng_svc: rng-tools
+redis_svc: redis
 misp_services:
     - "{{ apache_svc }}"
     - "{{ mysql_svc }}"
