travis: docker test. re-enable other platforms + document

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@
 sudo: required
 
 env:
-#  - distribution: centos
-#    version: 7
-#    init: /usr/lib/systemd/systemd
-#    run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
+  - distribution: centos
+    version: 7
+    init: /usr/lib/systemd/systemd
+    run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
   - distribution: ubuntu
     version: 16.04
     init: /lib/systemd/systemd
@@ -14,11 +14,11 @@ env:
 #    run_opts: "--cap-add SYS_ADMIN"
 #    run_opts: "--cap-add net_admin"
 ## FIXME! travis: 'No output has been received in the last 10m0s, this potentially indicates a stalled build or something wrong with the build itself.'
-#  - distribution: ubuntu
-#    version: 14.04
-#    init: /sbin/init
-##    run_opts: ""
-#    run_opts: "--privileged"
+  - distribution: ubuntu
+    version: 14.04
+    init: /sbin/init
+#    run_opts: ""
+    run_opts: "--privileged"
 #  - distribution: alpine
 #    version: 3.4
 #    init: /sbin/init
