sync repositories - move lxc privileged to centos only, galaxy naming

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,12 +1,6 @@
 ---
 driver:
   name: lxd_cli
-## FIXME! httpd/centos7/capability issue on lxc
-## https://github.com/lxc/lxd/issues/1245
-## https://bugzilla.redhat.com/show_bug.cgi?id=1012952
-## no drop of setfcap = 'set lxc.cap.drop = audit_control audit_write mac_admin mac_override mknod setpcap sys_admin sys_boot sys_module sys_nice sys_pacct sys_rawio sys_resource sys_time sys_tty_config'
-  config:
-    security.privileged: true
 
 transport:
   name: sftp
@@ -42,6 +36,13 @@ platforms:
         - ["forwarded_port", {guest: 80, host: 8588}]
 #  - name: ubuntu-12.04
   - name: centos-7
+## httpd/centos7/capability issue on lxc
+## https://github.com/lxc/lxd/issues/1245	= only choice is privileged
+## https://bugzilla.redhat.com/show_bug.cgi?id=1012952
+    driver:
+      config:
+        security.privileged: true
+#  - name: centos-6
 #  - name: centos-6
 #  - name: alpine-3.4
 
