--- a/vars/Ubuntu-16.04.yml
+++ b/vars/Ubuntu-16.04.yml
@@ -31,6 +31,11 @@ misp_pkg_list:
  - python3-pip
  - acl
  - sudo
+## pillow
+ - libtiff5-dev
+ - libjpeg8-dev
+ - zlib1g-dev
+ - libfreetype6-dev
 
 mysql_svc: mysql
 rng_svc: rng-tools
